Version 6.1.3
- fixed session state provider table definition to allow more than 64K per-session data (bug#47339)
- fixed compilation problem in NativeDriver inside ExecuteDirect  (bug #47354)
- fixed default collation bug with session provider table (bug #47332)
- in sessionState provider, timeout value was read from the wrong (root) web.config (bug#47815)

Version 6.1.2
- fixed hanging after losing network connectivity to server (bug#43761) 
  Better fix is planned for 6.2
- removed ReturnGeneratedIdentifiers.  We are now treating the command builder exactly
  the same way SqlClient does
- fixed some bugs with session state provider
- fixed typo in asp.net config wizard  
  
Version 6.1.1
- lots of bug fixes merged up from 6.0.5
- fixed website config wizard so that it shows for all web types

Version 6.1.0
- Added new MySQL Website Configuration Wizard
- Now supports native inout and output parameters when in prepared mode and running against a server
  that supports it
- Changed our native guid support to char(32)
- Added a connection string option 'old guids=yes|no' to allow users who have older applications
  to continue using binary(16) guids

Version 6.0.5
- ensure that MySqlPacket always has a valid encoding. This prevents null reference exceptions in ReadString()
  (bug#46844)
- fixed memory leak in server when calling stored procedure with output parameter many times 
  in the same session (bug#36027)
- workaround for .NET compact framework problems when writing behind the end of MemoryStream 
(contributed by Nicholas Piasecki) (bug#43736)
- added keepalive connection option that can be used to detect network outages faster 
  and prevent firewalls from dropping idle connections (bug#40684)
- fixed bug where our internal driver was using a batched command even if the user had added
  'allow batch=false' to their connection string (bug #45502)
- we are now throwing an exception when DeriveParameters is unable to successfully populate